[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kursovaya"
version = "0.1.0"
description = "Проект по анализу финансовых данных"
authors = [{ name = "Твоё имя", email = "твой@email.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
