[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kursovaya"
version = "0.1.0"
description = "Проект по анализу финансовых данных"
authors = [{ name = "Твоё имя", email = "твой@email.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=1.5.3"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

