[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kursovaya"
version = "0.1.0"
description = "Проект по анализу финансовых данных"
authors = [{ name = "Твоё имя", email = "твой@email.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=1.5.3"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

# Настройки Black
[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Настройки isort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["kursovaya"]
known_third_party = ["pandas"]

# Настройки mypy
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
pretty = true
exclude = "(tests/|migrations/)"
